<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inloggen_1"
        android:inputType="text">
    </EditText>
    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:hint="@string/inloggen_2"
        android:inputType="textPassword"
        android:fontFamily="sans-serif" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="15dp"
        android:text="@string/inloggen_3"
        android:onClick="inloggen" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textView1"
	    android:layout_alignParentBottom="true"
	    android:clickable="true"
	    android:onClick="registreren"
	    android:text="@string/inloggen_5"
	    android:textColor="#069BFF" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/textView2"
	    android:layout_alignLeft="@+id/button1"
        android:clickable="true"
        android:onClick="registreren"
	    android:text="@string/inloggen_4" />

</RelativeLayout>
