<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

	<TextView
        android:id="@+id/over1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/over_1"
        android:textColor="#069BFF"
        android:textSize="20sp" />
    
	<TextView
        android:id="@+id/over2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/over1"
        android:layout_marginTop="5dp"
        android:text="@string/over_2" />

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/over2"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/over3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="5dp"
        android:text="@string/over_3" />

    <TextView
        android:id="@+id/over4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/over3"
        android:layout_marginTop="5dp"
        android:textColor="#069BFF"
        android:text="@string/over_4" />

</RelativeLayout>
